--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,3 @@
-# local package
--e .
-
 # external requirements
 click
 Sphinx
@@ -8,3 +5,22 @@ coverage
 awscli
 flake8
 python-dotenv>=0.5.1
+matplotlib==3.3.3
+seaborn
+scikit-survival
+psycopg2-binary==2.8.6
+numpy
+pandas==1.1.5
+psycopg2-binary==2.8.6
+pytest==6.2.1
+python-dateutil==2.8.1
+python-dotenv==0.15.0
+scikit-learn==0.23.2
+scipy==1.5.4
+shap==0.35.0
+six==1.15.0
+sklearn==0.0
+slicer==0.0.3
+SQLAlchemy==1.3.22
+urllib3==1.26.2
+xgboost==1.2.1
