--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,9 @@
 # external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
 matplotlib==3.3.3
 seaborn
 scikit-survival
 psycopg2-binary==2.8.6
-numpy
+numpy==1.23.1
 pandas==1.1.5
 psycopg2-binary==2.8.6
 pytest==6.2.1
@@ -24,3 +18,4 @@ slicer==0.0.3
 SQLAlchemy==1.3.22
 urllib3==1.26.2
 xgboost==1.2.1
+jupyter
